--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.3.0",
+    "@tiptap/extension-bold": "^2.12.0",
+    "@tiptap/extension-heading": "^2.12.0",
+    "@tiptap/extension-text-align": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
+    "next": "^15.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
