--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
