--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@tinymce/tinymce-react": "^6.2.1",
+    "@tiptap/extension-blockquote": "^2.24.0",
+    "@tiptap/extension-bullet-list": "^2.24.0",
+    "@tiptap/extension-heading": "^2.24.0",
+    "@tiptap/extension-horizontal-rule": "^2.24.0",
+    "@tiptap/extension-image": "^2.24.0",
+    "@tiptap/extension-link": "^2.25.0",
+    "@tiptap/extension-list-item": "^2.24.0",
+    "@tiptap/extension-ordered-list": "^2.24.0",
+    "@tiptap/extension-paragraph": "^2.24.0",
+    "@tiptap/extension-text-align": "^2.25.0",
     "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/react": "^2.25.0",
+    "@tiptap/starter-kit": "^2.25.0",
+    "ckeditor5-build-classic-with-alignment": "^11.2.1",
+    "ckeditor5-custom-build-classic": "^0.0.1",
     "next": "^15.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-quill": "^2.0.0",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "tinymce": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
